# uvrobot

./: buildcleanup.sh
arduino/ESP32_Motor_MX1508_UART_Control_4ch/: ESP32_Motor_MX1508_UART_Control_4ch.ino
arduino/JazzyEliteMega/: JazzyEliteMega.ino
arduino/JazzyEliteNano/: JazzyEliteNano.ino
arduino/R1_ESP32_Analog/: R1_ESP32_Analog.ino
arduino/SoftwareSerialParityHalfDuplex/: SoftwareSerialParityHalfDuplex.cpp  SoftwareSerialParityHalfDuplex.h
arduino/SoftwareSerialParityHalfDuplex/Examples/BasicUse/: BasicUse.ino
src/: .rosinstall
src/cartographer_ros/cartographer_ros/launch/: demo_backpack_2d_localization.launch  offline_backpack_2d.launch  offline_pbstream_to_rosmap.launch  rplidar_localization_bag.launch
src/detection/: CMakeLists.txt  ReadME.md  package.xml
src/detection/launch/: obstacle_detection.launch
src/detection/msg/: obstacle.msg
src/detection/src/: obstacle_detection.cpp  obstacle_detection.hpp  obstacle_detection_node.cpp
src/driver/jazzy_drive/: CMakeLists.txt  package.xml
src/driver/jazzy_drive/launch/: jazzy_drive.launch
src/driver/jazzy_drive/src/: jazzy_drive.cpp  jazzy_drive.h
src/driver/mecanum_drive/: CMakeLists.txt  package.xml  setup.py
src/driver/mecanum_drive/launch/: robot_drive.launch
src/driver/mecanum_drive/scripts/: robot_drive.py
src/driver/mecanum_drive/src/: robot_drive.py  uart_test.py
src/driver/odometry_driver/: CMakeLists.txt  package.xml
src/driver/odometry_driver/launch/: odometry_driver.launch
src/driver/odometry_driver/src/: odometry_driver.cpp  odometry_driver.hpp  odometry_driver_node.cpp
src/navigation/amcl/: CMakeLists.txt
src/navigation/amcl/src/: amcl_node.cpp  rotate_image_map.cpp
src/navigation/amcl/test/: basic_localization_stage.xml  basic_localization_stage_bag.xml  basic_localization_stage_bag_new.xml  basic_localization_stage_new.xml  global_localization_stage.xml
src/navigation/base_local_planner/: CMakeLists.txt
src/navigation/base_local_planner/cfg/: BaseLocalPlanner.cfg
src/navigation/base_local_planner/src/: goal_functions.cpp  latched_stop_rotate_controller.cpp  local_planner_util.cpp  map_grid_cost_function.cpp  obstacle_cost_function.cpp  odometry_helper_ros.cpp  simple_scored_sampling_planner.cpp  simple_trajectory_generator.cpp  trajectory.cpp  trajectory_planner_ros.cpp
src/navigation/carrot_planner/: CMakeLists.txt
src/navigation/clear_costmap_recovery/src/: clear_costmap_recovery.cpp
src/navigation/costmap_2d/: CMakeLists.txt
src/navigation/costmap_2d/cfg/: InflationPlugin.cfg
src/navigation/costmap_2d/plugins/: inflation_layer.cpp  (+3 more)
src/navigation/dwa_local_planner/: CMakeLists.txt
src/navigation/fake_localization/: CMakeLists.txt  fake_localization.cpp
src/navigation/global_planner/: CMakeLists.txt
src/navigation/move_base/: CMakeLists.txt  package.xml
src/navigation/move_base/include/move_base/: move_base.h
src/navigation/move_base/launch/: filter_scan_data.launch  move_base.launch.xml  move_localization.launch  move_localization_bag.launch  move_localization_manual_drive.launch  move_manual_drive.launch  move_mapping.launch  move_navigation.launch  move_navigation_bag.launch  move_rviz.launch  robot_tf.launch
src/navigation/move_base/msg/: TaskData.msg
src/navigation/move_base/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  goal_list_setting.csv  local_costmap_params.yaml  mecanum_robot.urdf  move_base_params.yaml  move_demo_2d.rviz  rplidar.lua  rplidar_localization.lua
src/navigation/move_base/src/: display_coordinate_system.cpp  filter_scan_data.cpp  move_base.cpp  move_base_node.cpp  path_marker_publisher.cpp
src/navigation/rotate_recovery/: CMakeLists.txt
src/operation_detection/: CMakeLists.txt  ReadME.md  package.xml
src/operation_detection/launch/: operation_detection.launch
src/operation_detection/src/: operation_detection_core.cpp  operation_detection_core.hpp  operation_detection_node.cpp
src/rosbridge_server/launch/: .rosbridge_websocket.launch.un~
src/state_manager/: CMakeLists.txt  package.xml
src/state_manager/launch/: state_manager.launch
src/state_manager/src/: state_manager_core.cpp  state_manager_core.hpp  state_manager_node.cpp
src/wsserver/: CMakeLists.txt  ReadME.md  package.xml  package.xml.backup
src/wsserver/launch/: simple_repeat.launch  wsserver.launch
src/wsserver/src/: simple_repeat.cpp  wsserver_core.cpp  wsserver_core.hpp  wsserver_node.cpp
testfiles/: sw2realtime.sh  sw2simulate.sh
testfiles/html/: testme.html  ws-client.js
(+49 files in other folders)
